Changes to output directory; added it to output of get-experfwiz Fix #8

--- a/Templates/Exch_10_Full.xml
+++ b/Templates/Exch_10_Full.xml
@@ -22,7 +22,7 @@
 	<Subdirectory>
 	</Subdirectory>
 	<SubdirectoryFormat>3</SubdirectoryFormat>
-	<SubdirectoryFormatPattern>yyyyMMdd</SubdirectoryFormatPattern>
+	<SubdirectoryFormatPattern></SubdirectoryFormatPattern>
 	<Task>
 	</Task>
 	<TaskRunAsSelf>0</TaskRunAsSelf>
